
[workspace]
resolver = "3"
members = ["jangada-core", "jangada-sim", "jangada-tokio", "jangada-vis"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
jangada-core.path = "./jangada-core"

axum = "0.8.4"
clap = { version = "4.5.46", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[workspace.dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync"]
